plugins {
    id 'org.springframework.boot' version '4.1.0' 
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.owasp.dependencycheck' version '12.1.0'
    id 'java'
    id 'eclipse-wtp'
}

group = 'com.dyinfotech'
version = '0.0.1-SNAPSHOT'
description = 'annual-leave-backend'

dependencyCheck {
    format = 'HTML'
    outputDirectory = file("$buildDir/reports/dependency-check")
    
    failBuildOnCVSS = 7.0
}

java {
	// disable toolchain because of avoiding error
	// Class org.gradle.jvm.toolchain.JvmVendorSpec does not have member field 'org.gradle.jvm.toolchain.JvmVendorSpec IBM_SEMERU'
    //toolchain {
    //    languageVersion = JavaLanguageVersion.of(21)
    //}
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

eclipse {
	classpath {
        plusConfigurations += [configurations.annotationProcessor]
    }
    
    wtp {
        facet {
            facet name: 'java', version: '21'
        }
    }
    
    jdt {
        file {
            withProperties { properties ->
                properties.setProperty('org.eclipse.jdt.core.compiler.codegen.methodParameters', 'generate')
            }
        }
    }
}

jar {
	// disable creating *-plain.jar
    enabled = false
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // email validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    // WebClient (alternative RestClient for using async communication)
    implementation('org.springframework.boot:spring-boot-starter-webflux') {
    	// don't need netty starter engine (high performance but heavy library)
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-reactor-netty'
    }
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    // Jackson Databind (ObjectMapper)
    implementation 'org.springframework.boot:spring-boot-starter-json'
    // phone validation
    //implementation 'com.googlecode.libphonenumber:libphonenumber:8.13.28'
    // XXX: developmentOnly -> implementation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
    
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
    
    // Firebase Admin SDK
    implementation platform('com.google.cloud:libraries-bom:26.32.0')
    implementation('com.google.firebase:firebase-admin:9.10.0') {
    	// don't need Firestore(NoSQL DB) feature
	    exclude group: 'com.google.cloud', module: 'google-cloud-firestore'
	    exclude group: 'com.google.api.grpc', module: 'proto-google-cloud-firestore-v1'
	
	    // don't need Cloud Storage(File Upload) feature but need com.google.api.client.json.jackson2.JacksonFactory
	    exclude group: 'com.google.cloud', module: 'google-cloud-storage'
	
	    // don't need gRPC communication (FCM uses REST API)
	    exclude group: 'io.grpc'
	    exclude group: 'com.google.api.grpc'
	    exclude group: 'com.google.protobuf', module: 'protobuf-java'
	
	    // don't need mock-server & legacy logger
	    exclude group: 'org.mock-server', module: 'mockserver-junit-rule-no-dependencies'
	    exclude group: 'commons-logging', module: 'commons-logging'
	
	    // don't need netty
	    exclude group: 'io.netty'
	}
	// com.google.api.client.json.jackson2.JacksonFactory (version control -> BOM)
    implementation 'com.google.http-client:google-http-client-jackson2'
    
    // Caffeine Cache
    implementation 'com.github.ben-manes.caffeine:caffeine'
    
    // sql log parameter setting
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:2.0.1'
	
	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
}

def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
    main.java.srcDir querydslDir
}

tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory = file(querydslDir)
}

tasks.withType(JavaCompile) {
    options.release = 21
    options.compilerArgs.add("-parameters")
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty 'file.encoding', 'UTF-8'
}

bootJar {
    archiveFileName = 'annual-leave-backend.jar'
}
